examples/invalid/syntaxErr/for/forNodone.wacc
# for missing closing done

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  for (int x = 1, x < 10, x = x + 1)
    skip
end